syntax = "proto3";

package grpc.login;

service LoginService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
    rpc ActivateUser(ActivateUserRequest) returns (ActivateUserResponse)
}


message RetCodeResponse{
    int32 Errorcode = 1;
    string message = 2;
}


message RegisterRequest {
      string username = 1;
      string nickname = 2;
      string email = 3;
      string password = 4;
      string password_confirmation = 5;
}


message RegisterResponse {
     RetCodeResponse retcode = 1;
}



message LoginRequest {
      string username = 1;
      string password = 2;
}

message LoginResponse {
       int32 id = 1;
       RetCodeResponse retcode = 2;
}



message SendEmailRequest {
      in32 user_id = 1;
}


message SendEmailResponse {
      RetCodeResponse retcode = 1;
 }




message SendEmailRequest {
      in32 user_id = 1;
      string code = 2;
}



message SendEmailResponse {
      RetCodeResponse retcode = 1;
 }


